k8s/testnet/deployment-testnet.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aledger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aledger-web-testnet-deployment
  namespace: aledger
spec:
  selector:
    matchLabels:
      app: aledger-web-testnet
  replicas: 1
  template:
    metadata:
      labels:
        app: aledger-web-testnet
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: aledger-web-testnet
          image: scholtz2/aledger-fe:1.2024.02.15-main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 2
            terminationGracePeriodSeconds: 1
          volumeMounts:
            - name: aledger-testnet-conf
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: aledger-testnet-conf
          configMap:
            name: aledger-testnet-conf

---
apiVersion: v1
kind: Service
metadata:
  name: aledger-testnet-service
  namespace: aledger
spec:
  type: ClusterIP
  selector:
    app: aledger-web-testnet
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aledger-web-testnet
  namespace: aledger
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - testnet.accounting.biatec.io
        - www.testnet.accounting.biatec.io
      secretName: tls-testnet.accounting.biatec.io
  rules:
    - host: testnet.accounting.biatec.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: aledger-testnet-service
                port:
                  number: 8080
    - host: www.testnet.accounting.biatec.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: aledger-testnet-service
                port:
                  number: 8080
